[package]
name = "iced_graphics"
description = "A bunch of backend-agnostic types that can be leveraged to build a renderer for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
geometry = ["lyon_path"]
image = ["dep:image", "kamadak-exif"]
svg = []
web-colors = []
fira-sans = []

[dependencies]
iced_core.workspace = true
iced_futures.workspace = true

bitflags.workspace = true
bytemuck.workspace = true
cosmic-text.workspace = true
half.workspace = true
log.workspace = true
raw-window-handle.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

image.workspace = true
image.optional = true

kamadak-exif.workspace = true
kamadak-exif.optional = true

lyon_path.workspace = true
lyon_path.optional = true
