[package]
name = "iced_ios"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = "2018"
description = "iOS backend for iced"

[package.metadata.bundle.example.ios-example]
name = "ios-example"
identifier = "com.github.iced.simple"
category = "Utility"
short_description = "An example of a bundled application"
long_description = """
A trivial application that just displays a blank window with
a title bar.  It serves as an example of an application that
can be bundled with cargo-bundle, as well as a test-case for
cargo-bundle's support for bundling crate examples.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "1.5"
raw-window-handle = "^0.3"
# winit = "^0.22"
# winit = { path = "../../winit/" }
winit = { git = "https://github.com/simlay/winit", branch = "ios-rename-nsstring"}
objc = "0.2.7"
uikit-sys = { git = "https://github.com/simlay/uikit-sys" }
log = "0.4"
num-traits = "0.2"
#uikit-sys = { path = "../../uikit-sys/" }

[dependencies.iced_core]
version = "0.2"
path = "../core"

[dependencies.iced_style]
version = "0.1"
path = "../style"

[dependencies.iced_futures]
version = "0.1"
path = "../futures"
features = ["thread-pool"]

[dev-dependencies]
iced = { path = "../", features = ["image", "debug"] }
pretty_env_logger = "0.3"
color-backtrace = { version = "0.4.2", features = ["failure-bt"] }
