[package]
name = "iced_native"
version = "0.5.1"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A renderer-agnostic library for native GUIs"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[features]
debug = []

[dependencies]
twox-hash = { version = "1.5", default-features = false }
unicode-segmentation = "1.6"
num-traits = "0.2"

[dependencies.iced_core]
version = "0.5"
path = "../core"

[dependencies.iced_futures]
version = "0.4"
path = "../futures"
features = ["thread-pool"]

[dependencies.iced_style]
version = "0.4"
path = "../style"
