[package]
name = "iced_native"
version = "0.7.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A renderer-agnostic library for native GUIs"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[features]
default = ["wayland"]
wayland = ["sctk"]
debug = []

[dependencies]
twox-hash = { version = "1.5", default-features = false }
unicode-segmentation = "1.6"
num-traits = "0.2"
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit", rev = "73346019952f82ec7e4d4d15f5d66841b54e8b61", optional = true }

[dependencies.iced_core]
version = "0.6"
path = "../core"

[dependencies.iced_futures]
version = "0.5"
path = "../futures"
features = ["thread-pool"]

[dependencies.iced_style]
version = "0.5.1"
path = "../style"
