[package]
name = "iced_native"
version = "0.9.1"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "A renderer-agnostic library for native GUIs"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[features]
debug = []

[dependencies]
thiserror = "1"

[dependencies.iced_core]
version = "0.8"
path = "../core"

[dependencies.iced_futures]
version = "0.6"
path = "../futures"
features = ["thread-pool"]
