[package]
name = "iced_profiling"
authors = ["Bingus <shankern@protonmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Profiling backend implementations for Iced"

[dependencies]
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }

[dependencies.tracing-chrome]
version = "0.7.0"
optional = true
