[package]
name = "iced_program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
time-travel = []

[dependencies]
iced_graphics.workspace = true
iced_runtime.workspace = true
