[package]
name = "iced_pure"
version = "0.2.2"
edition = "2021"
description = "Pure widgets for Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
documentation = "https://docs.rs/iced_pure"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[dependencies]
iced_native = { version = "0.5", path = "../native" }
iced_style = { version = "0.4", path = "../style" }
num-traits = "0.2"
