[package]
name = "iced_renderer"
description = "The official renderer for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
wgpu = ["iced_wgpu/default"]
wgpu-bare = ["iced_wgpu"]
tiny-skia = ["iced_tiny_skia"]
image = ["iced_tiny_skia?/image", "iced_wgpu?/image"]
svg = ["iced_tiny_skia?/svg", "iced_wgpu?/svg"]
svg-text = ["iced_tiny_skia?/svg-text", "iced_wgpu?/svg-text"]
svg-raster-images = ["iced_tiny_skia?/svg-raster-images", "iced_wgpu?/svg-raster-images"]
geometry = ["iced_graphics/geometry", "iced_tiny_skia?/geometry", "iced_wgpu?/geometry"]
web-colors = ["iced_wgpu?/web-colors"]
webgl = ["iced_wgpu?/webgl"]
fira-sans = ["iced_graphics/fira-sans"]
strict-assertions = ["iced_wgpu?/strict-assertions"]
x11 = ["iced_tiny_skia?/x11"]
wayland = ["iced_tiny_skia?/wayland"]

[dependencies]
iced_graphics.workspace = true

iced_tiny_skia.workspace = true
iced_tiny_skia.optional = true

iced_wgpu.workspace = true
iced_wgpu.optional = true

log.workspace = true
thiserror.workspace = true
