[package]
name = "iced_renderer"
description = "The official renderer for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
wgpu = ["iced_wgpu/default"]
wgpu-bare = ["iced_wgpu"]
vello-cpu = ["iced_vello_cpu"]
image = ["iced_vello_cpu?/image", "iced_wgpu?/image"]
svg = ["iced_vello_cpu?/svg", "iced_wgpu?/svg"]
geometry = ["iced_graphics/geometry", "iced_vello_cpu?/geometry", "iced_wgpu?/geometry"]
web-colors = ["iced_wgpu?/web-colors"]
webgl = ["iced_wgpu?/webgl"]
fira-sans = ["iced_graphics/fira-sans"]
strict-assertions = ["iced_wgpu?/strict-assertions"]
x11 = ["iced_vello_cpu?/x11"]
wayland = ["iced_vello_cpu?/wayland"]

[dependencies]
iced_graphics.workspace = true

iced_vello_cpu.workspace = true
iced_vello_cpu.optional = true

iced_wgpu.workspace = true
iced_wgpu.optional = true

log.workspace = true
thiserror.workspace = true
