[package]
name = "iced_runtime"
description = "A renderer-agnostic runtime for iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
debug = []
multi-window = []

[dependencies]
bytes.workspace = true
iced_core.workspace = true
iced_futures.workspace = true
iced_futures.features = ["thread-pool"]

thiserror.workspace = true
raw-window-handle.workspace = true
