[package]
name = "iced_sctk"
version = "0.0.0"
authors = ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"
description = "An sctk runtime for Iced"
license = "MIT"
repository = "https://github.com/hecrj/iced"
documentation = "https://docs.rs/iced_sctk"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]

[features]
#clipboard = []
#debug = []
#smithay-client-toolkit/frames

[dependencies]
cfg-if = ''
derive_more = ''
pin-utils = "^0.1"
futures = "^0.3"
futures-util = "^0.3"
#smithay-client-toolkit = { version = "^0.9", default-features=false, features=["frames"] } #-calloop
smithay-client-toolkit = { git = 'https://github.com/smithay/client-toolkit.git', default-features=false, features=["frames"] } #120:map_keyboard
smol = ''
raw-window-handle = "0.3"
#window_clipboard = "0.1"
log = "0.4"
iced_native = { version = "0.2", path = "../native" }
iced_shm = { version='', path = '../shm' } # ShmBackend need sctk env (fixme: depend on a separate crate with only ShmBackend ~iced_native)

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.6"
