[package]
name = "iced_selector"
description = "A set of abstractions for selecting data from the widget tree"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
iced_core.workspace = true

[lints]
workspace = true
