[package]
name = "iced_shm"
version = "0.0.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>","Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"
description = "A CPU renderer to system shared memory for Iced"
license = "MIT AND OFL-1.1"
repository = "https://github.com/hecrj/iced"

[features]
svg = ["resvg"]
canvas = ["lyon"]

[dependencies]
glam = "0.8"
font-kit = { version = "0.4", optional=true }
log = "0.4"
#iced_sctk = { version = "^0.0", path = "../sctk" } # NoHasRawWindowHandleBackend
framework = { version = "^0.0", path = "../../framework" }
#framework = { version = "^0.0", git = "https://github.com/Matthias-Fauconneau/framework" }

[dependencies.iced_native]
version = "0.2"
path = "../native"

[dependencies.iced_style]
version = "0.1"
path = "../style"

[dependencies.image]
version = "0.22"
optional = true

[dependencies.resvg]
version = "0.8"
features = ["raqote-backend"]
optional = true

[dependencies.lyon]
version = "0.15"
optional = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
