[package]
name = "iced_style"
description = "The default set of styles of Iced"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
serde = ["dep:serde", "iced_core/serde"]

[dependencies]
iced_core.workspace = true
iced_core.features = ["palette"]

palette.workspace = true
once_cell.workspace = true

serde.workspace = true
serde.optional = true
serde.features = ["derive"]
