[package]
name = "iced_swbuf"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
edition = "2021"
description = "A swbuf renderer for Iced"
license = "MIT AND OFL-1.1"
repository = "https://github.com/iced-rs/iced"

[dependencies]
cosmic-text = "0.6"
lazy_static = "1.4"
log = "0.4"
raw-window-handle = "0.5"
raqote = { version = "0.8", default-features = false }
swbuf = { git = "https://github.com/rust-windowing/swbuf", rev = "9b8641fc" }

[dependencies.iced_native]
path = "../native"

[dependencies.iced_graphics]
path = "../graphics"
features = ["font-fallback", "font-icons"]

[features]
default = []
svg = ["iced_graphics/svg"]
image = ["iced_graphics/image"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
